--- a/requirements.txt
+++ b/requirements.txt
@@ -1,168 +1,9 @@
 altair==5.1.1
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.5.2
-asttokens==2.1.0
-async-generator==1.10
-attrs==22.1.0
-Babel==2.11.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blinker==1.6.2
-bokeh==3.0.3
-branca==0.6.0
-cachetools==5.3.1
 category-encoders==2.6.1
-certifi==2022.9.24
-cffi==1.15.1
-charset-normalizer==2.1.1
-ChernoffFace==0.1.4
-click==8.1.7
-colorama==0.4.6
-comm==0.1.1
-contourpy==1.0.6
-cycler==0.11.0
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-Django==4.1.2
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.1.0
-executing==1.2.0
-fastjsonschema==2.16.2
+ce==1.0
 folium==0.14.0
-fonttools==4.38.0
-fpdf==1.7.2
-geographiclib==2.0
 geopy==2.4.0
-gitdb==4.0.10
-GitPython==3.1.36
-google-auth==2.23.0
-google-auth-oauthlib==1.1.0
-gspread==5.11.2
-h11==0.14.0
-idna==3.4
-imbalanced-learn==0.10.1
-importlib-metadata==6.8.0
-ipykernel==6.18.1
-ipython==8.7.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.2
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.10
-jsonschema==4.17.1
-jupyter-console==6.4.4
-jupyter-server==1.23.3
-jupyter_client==7.4.7
-jupyter_core==5.1.0
-jupyterlab==3.5.0
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
-jupyterlab_server==2.16.3
-kiwisolver==1.4.4
-lxml==4.9.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==2.0.4
-nbclassic==0.4.8
-nbclient==0.7.0
-nbconvert==7.2.5
-nbformat==5.7.0
-nest-asyncio==1.5.6
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.23.5
-oauthlib==3.2.2
-opencv-contrib-python==4.6.0.66
-opencv-python==4.7.0.68
-opencv-python-headless==4.7.0.68
-openpyxl==3.1.2
-outcome==1.2.0
-packaging==21.3
 pandas==1.5.2
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.3
-pickleshare==0.7.5
-Pillow==9.3.0
-platformdirs==2.5.4
-plotly==5.11.0
-prometheus-client==0.15.0
-prompt-toolkit==3.0.33
-protobuf==4.24.3
-psutil==5.9.4
-pure-eval==0.2.2
-pyarrow==13.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydeck==0.8.0
-Pygments==2.13.0
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.2
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytz==2022.6
-pytz-deprecation-shim==0.1.0.post0
-pywin32==305
-pywinpty==2.0.9
-PyYAML==6.0
-pyzmq==24.0.1
-qtconsole==5.4.0
-QtPy==2.3.0
+pickle==1.0.1
 rarfile==4.1
-requests==2.28.1
-requests-oauthlib==1.3.1
-rich==13.5.3
-rsa==4.9
-scikit-learn==1.2.1
-scipy==1.10.0
-seaborn==0.12.1
-selenium==4.8.2
-Send2Trash==1.8.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-sqlparse==0.4.3
-stack-data==0.6.2
-statsmodels==0.14.0
 streamlit==1.26.0
-summarytools==0.2.3
-tenacity==8.1.0
-terminado==0.17.0
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.0
-tornado==6.2
-tqdm==4.66.1
-traitlets==5.5.0
-trio==0.22.0
-trio-websocket==0.9.2
-typing_extensions==4.8.0
-tzdata==2022.4
-tzlocal==4.3.1
-urllib3==1.26.13
-validators==0.22.0
-vega-datasets==0.9.0
-watchdog==3.0.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.4.2
-widgetsnbextension==4.0.3
-wsproto==1.2.0
-xgboost==1.7.6
-xyzservices==2022.9.0
-zipp==3.17.0
