--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ category-encoders==2.6.1
 folium==0.14.0
 geopy==2.4.0
 pandas==1.5.2
-pickle==1.0.1
+pickleshare==0.7.5
 rarfile==4.1
 streamlit==1.26.0
